@@ -15,7 +15,7 @@ Methods for forecasting hierarchical or grouped time series.
                          keep.fitted = FALSE, keep.resid = FALSE,
                          positive = FALSE, lambda = NULL, level, 
                          weights = c("sd", "none", "nseries"),
-                         parallel = FALSE, num.cores = 2,
+                         parallel = FALSE, num.cores = 2, FUN = NULL,
                          xreg = NULL, newxreg = NULL, ...) 
 }
 \arguments{
@@ -33,6 +33,9 @@ Methods for forecasting hierarchical or grouped time series.
   \item{level}{Level used for "middle-out" method (only used when \code{method="mo"})}
   \item{parallel}{If TRUE, import \code{parallel} package to allow parallel processing}
   \item{num.cores}{If parallel = TRUE, specify how many cores are going to be used}
+  \item{FUN}{It allows users to define their own forecasting function other than
+    the functions used in the \code{fmethod}. There's no use in the arguments \code{positive}
+  and \code{lambda}, if \code{FUN} is being used.}
   \item{xreg}{When \code{fmethod = "arima"}, a vector or matrix of external regressors, which must have the same number of rows as the original univariate time series}
   \item{newxreg}{When \code{fmethod = "arima"}, a vector or matrix of external regressors, which must have the same number of rows as the original univariate time series}
   \item{...}{Other arguments passing to \code{\link[forecast]{ets}} or \code{\link[forecast]{auto.arima}}}
