@@ -1,6 +1,7 @@
 v4.4 (xx 2014)
 * Allowed multiple seasonal objects "msts" in hts() and gts().
 * Fixed bug of MASE in accuracy.gts().
+* Allowed user's defined forecasting function in forecast.gts().
 
 v4.3 (10 June 2014)
 * Fixed bug of the arg "include" in plot.gts, when there are not yearly data.
